fixed small mathjax font and too long decimal places in answers 🚀

--- a/src/bmi-calc-styles.css
+++ b/src/bmi-calc-styles.css
@@ -50,8 +50,8 @@
 }
 
 .fields {
-  margin: 1% 5%;
-  /* border: 1px solid black; */
+  margin: 1% 3% 1% 5%;
+  
 }
 
 .label {
@@ -107,6 +107,10 @@ input::-moz-inner-spin-button {
 .formula-view {
   margin-top: 20px;
 }
+
+.MathJax {
+  font-size: 130% !important;
+}
 mjx-container {
   text-align: left !important;
 }
@@ -132,4 +136,12 @@ mjx-container {
     border-bottom-right-radius: 20px;
     margin-left: 1%;
     padding: 0 10px;
+}
+
+.answer {
+  border-left: 5px solid black;
+}
+.your-bmi-is {
+  text-align: left !important;
+  padding-left: 40px;
 }
